--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
@@ -104,6 +103,7 @@
          </li>
          <h4>Николай Кучеренко</h4>
          <p lang="en">Product Designer</p>
+         <ul>
          <li><a href="" aria-label="Instagram"></a>
          <img src="./images/ellipse.png" alt="Instgram" width="44">
         </li>
@@ -122,11 +122,13 @@
             <img src="./images/ellipse(3).png" alt="Linkedin" width="44">
           </a>
         </li>
+      </ul>
        <li>
          <img src="./images/img(1).png" alt="член команди" width="270" height="260">
        </li>
        <h5>Ольга Иванова</h5>
        <p lang="en">Frontend Developer</p>
+       <ul>
       <li><a href="" aria-label="Instagram"></a>
         <img src="./images/ellipse.png" alt="Instgram" width="44">
       </li>
@@ -145,11 +147,13 @@
           <img src="./images/ellipse(3).png" alt="Linkedin" width="44">
         </a>
       </li>
+      </ul>
        <li>
         <img src="./images/img(2).png" alt="член команди" width="270" height="260">
         </li>
         <h6>Андрей Шевченко</h6>
         <p lang="en">Marketing</p>
+        <ul>
         <li><a href="" aria-label="Instagram"></a>
           <img src="./images/ellipse.png" alt="Instgram" width="44">
         </li>
@@ -168,11 +172,13 @@
             <img src="./images/ellipse(3).png" alt="Linkedin" width="44">
           </a>
         </li>
+        </ul>
         <li>
           <img src="./images/img(3).png" alt="член команди" width="270" height="260">
         </li>
           <h7>Иван Николаев</h7>
           <p lang="en">UI Designer</p>
+          <ul>
           <li><a href="" aria-label="Instagram"></a>
             <img src="./images/ellipse.png" alt="Instgram" width="44">
           </li>
@@ -191,6 +197,7 @@
               <img src="./images/ellipse(3).png" alt="Linkedin" width="44">
             </a>
           </li>
+        </ul>
         </ul>
         </section>
 
@@ -220,9 +227,8 @@
       </main>
 
       <footer>
-        <nav>
+        <div>
           <a lang="en" href="./index.html">Web Studio</a>
-        </nav>
           <address>г. Киев, пр-т Леси Украинки, 26</address>
           <ul>
             <li>
@@ -232,6 +238,7 @@
               <a href="tel:+380961111111">+380961111111</a>
             </li>
           </ul>
+          </div>
 
           <p>Присоеденяйтесь</p>
           <ul>
@@ -257,11 +264,15 @@
               </li>
             </ul>
 
-              <p>Подпишитеь на рассылку</p>
+              <p>Подпишитесь на рассылку</p>
+              <div>
+              <ul>
               <li>
                 <adress><a href="" lang="en">info@example.com</a></adress>
                 </li>
               <li><a href="">Подписаться</a>
               </li>
+              </ul>
+            </div>
             </footer>  
           </html>
